{
  "version": 4,
  "terraform_version": "0.12.10",
  "serial": 57,
  "lineage": "14e861ba-b054-9a35-529a-05acc15d58be",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:769968205550:vpc/vpc-3cb15b57",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-30fd095b",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-8a1bd7e1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-3cb15b57",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-d87ccfb3",
            "owner_id": "769968205550",
            "state": "available"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:769968205550:loadbalancer/elb-web",
            "availability_zones": [
              "us-east-2a",
              "us-east-2b",
              "us-east-2c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "elb-web-1604252016.us-east-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 5,
                "target": "HTTP:80/",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "elb-web",
            "idle_timeout": 60,
            "instances": [
              "i-007068da733065414",
              "i-0221f8d3c7eaa12fb",
              "i-065cf4b37a504272a"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "elb-web",
            "security_groups": [
              "sg-0ea2c66a8ad560154"
            ],
            "source_security_group": "769968205550/test_terraform-allow_HTTP",
            "source_security_group_id": "sg-0ea2c66a8ad560154",
            "subnets": [
              "subnet-1d388851",
              "subnet-5b8cc421",
              "subnet-c11103a9"
            ],
            "tags": {
              "Name": "test_terraform-elb-web"
            },
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "depends_on": [
            "aws_security_group.allow_HTTP"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_HTTP",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:769968205550:security-group/sg-0ea2c66a8ad560154",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ea2c66a8ad560154",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "test_terraform-allow_HTTP",
            "name_prefix": null,
            "owner_id": "769968205550",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-3cb15b57"
          },
          "depends_on": [
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_SSH",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:769968205550:security-group/sg-0c22b2336e11a941b",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c22b2336e11a941b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "test_terraform-allow_SSH",
            "name_prefix": null,
            "owner_id": "769968205550",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-3cb15b57"
          },
          "depends_on": [
            "data.aws_vpc.selected"
          ]
        }
      ]
    }
  ]
}